--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,28 @@
 spring.application.name=danmu
+
+# ?????
+server.port=8080
+
+# ????? - ??H2?????
+spring.datasource.url=jdbc:h2:mem:danmu
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+# H2?????
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# MyBatis Plus??
+mybatis-plus.configuration.map-underscore-to-camel-case=true
+mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+mybatis-plus.global-config.db-config.logic-delete-field=deleted
+mybatis-plus.global-config.db-config.logic-delete-value=1
+mybatis-plus.global-config.db-config.logic-not-delete-value=0
+
+# ????
+logging.level.com.blcoder.danmu=DEBUG
+logging.level.org.springframework.web.socket=DEBUG
+
+# ??????
+spring.web.resources.static-locations=classpath:/static/,classpath:/templates/
